--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,28 +42,21 @@ dependencies {
 
     implementation 'com.firebaseui:firebase-ui-database:1.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.google.firebase:firebase-core:18.0.2'
+    implementation 'com.google.firebase:firebase-core:18.0.3'
     implementation 'com.google.firebase:firebase-database:19.7.0'
 
-    implementation 'com.google.firebase:firebase-messaging:21.0.1'
+    implementation 'com.google.firebase:firebase-messaging:21.1.0'
     implementation 'com.google.android.material:material:1.3.0'  // for useing CardView in singUp UI
-    //implementation 'com.google.firebase:firebase-auth:20.0.3'
-    //implementation 'com.github.rengwuxian:MaterialEditText:2.1.4'
-   // implementation 'androidx.appcompat:design:1.2.0'
-    //implementation 'com.google.android.material:material:1.3.0' // add of me
-
-
-
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-firestore:22.1.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    //implementation 'androidx.recyclerview:recyclerview:1.1.0' // add of me (CardView)
-    //implementation 'androidx.cardview:cardview:1.0.0' // add of me (CardView)
+
 }
 
 apply plugin: 'com.android.application'
